Tech stack change: ERN

--- a/Archiv/index.html
+++ b/Archiv/index.html
@@ -9,5 +9,6 @@
 			document.cookie = "name=value;"
 			document.cookie = "name1=value1;"
 		</script>
+		<a href='plan.html'>PLAN</a>
 	</body>
 </html>
