--- a/Archiv/plan.html
+++ b/Archiv/plan.html
@@ -6,6 +6,6 @@
 	<body>
 		<h1>Vertretungsplaner</h1>
 		<p id="output"></p>
-		<script>generate("20210913", 14)</script>
+		<script>generate(14)</script>
 	</body>
 </html>
